# example-actix-yew

./: .gitignore  Makefile  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
static/: client.js  client.wasm  index.html
